# hide-and-seek

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  License.txt  LicenseRUS.txt  README  README.md  vs-chromium-project.txt
editor/: CMakeLists.txt  StealthGameEditor.pro
editor/forms/: mainwindow.ui
editor/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
editor/src/componenteditcontent/: abstracteditfactory.cpp  abstracteditfactory.h  componentcontentfactory.cpp  componentcontentfactory.h  componentregistration.cpp  componentregistration.h  transformcomponenteditfactory.cpp  transformcomponenteditfactory.h  typeeditconstructorhelpers.h  typeseditconstructor.cpp  typeseditconstructor.h
editor/src/componenteditcontent/customtypeeditconstructors/: animationclipparamseditconstructor.cpp  animationdescriptioneditconstructor.cpp  cellposeditconstructor.cpp  customtypeeditconstructors.h  entityeditconstructor.cpp  hulleditconstructor.cpp  rotatoreditconstructor.cpp  simplebordereditconstructor.cpp  spatialentityideditconstructor.cpp  spritedescriptioneditconstructor.cpp  spriteparamseditconstructor.cpp  stringideditconstructor.cpp  vector2deditconstructor.cpp
editor/src/editorcommands/: addcomponentcommand.cpp  addcomponentcommand.h  addentitycommand.cpp  addentitycommand.h  addentitygroupcommand.cpp  addentitygroupcommand.h  addspatialentitycommand.cpp  addspatialentitycommand.h  changeentitycommand.cpp  changeentitycommand.h  changeentitygrouplocationcommand.cpp  changeentitygrouplocationcommand.h  changetransformcomponentlocationcommand.cpp  changetransformcomponentlocationcommand.h  changetransformcomponentrotationcommand.cpp  changetransformcomponentrotationcommand.h  editorcommand.cpp  editorcommand.h  editorcommandsstack.cpp  editorcommandsstack.h  removecomponentcommand.cpp  removecomponentcommand.h  removeentitycommand.cpp  removeentitycommand.h
editor/src/editorutils/: componentreference.h  componentreferenceutils.cpp  componentreferenceutils.h  entityreference.h  entityreferenceutils.cpp  entityreferenceutils.h  worldsaveutils.cpp  worldsaveutils.h
editor/src/toolboxes/: ComponentAttributesToolbox.cpp  ComponentAttributesToolbox.h  ComponentsListToolbox.cpp  ComponentsListToolbox.h  EntitiesListToolbox.cpp  EntitiesListToolbox.h  PrefabListToolbox.cpp  PrefabListToolbox.h  TransformEditorToolbox.cpp  TransformEditorToolbox.h  WorldPropertiesToolbox.cpp  WorldPropertiesToolbox.h
res/: Hero.psd  (+9 more)
src/Engine/: CMakeLists.txt
src/Engine/AI/: AiRole.cpp  AiRole.h  AiState.cpp  AiState.h  AiStatesStack.cpp  AiStatesStack.h  IAiState.h  IBody.h  PlayerRole.cpp  PlayerRole.h  Role.cpp  Role.h
src/Engine/Actors/: Actor.cpp  Actor.h  Body.cpp  Body.h  Bullet.cpp  Bullet.h  LightEmitter.cpp  LightEmitter.h  SoundVolume.cpp  SoundVolume.h
src/Engine/Configs/: DebugMethods.h
src/Engine/Core/: IActor.h  Rotator.cpp  Rotator.h  Vector2D.cpp  Vector2D.h  World.cpp  World.h
src/Engine/Graphic/: IGraphicElement.h
src/Engine/Graphics/: Camera.cpp  Camera.h  DirectionArrow.cpp  DirectionArrow.h  FloatingCamera.cpp  FloatingCamera.h  GraphicLoader.cpp  GraphicLoader.h
src/Engine/Helpers/: DebugMethods.h  Log.cpp  Log.h
src/Engine/Hge/: HgeIncludes.h
src/Engine/Input/: KeyListeners.cpp  KeyListeners.h
src/Engine/Inventory/: InventoryItem.cpp  InventoryItem.h  Weapon.cpp  Weapon.h
src/Engine/Lua/: LuaAiState.cpp  LuaAiState.h  LuaFunction.cpp  LuaInstance.cpp  LuaInstance.h  LuaScript.cpp  LuaType.cpp  LuaType.h  LuaTypeActor.cpp  LuaTypeBody.cpp  LuaTypeLog.cpp  LuaTypeLog.h  LuaTypeRole.cpp  LuaTypeVector2D.cpp
src/Engine/Modules/: ActorFactory.cpp  ActorFactory.h  Collide.cpp  Collide.h  LevelLoader.cpp  LevelLoader.h  PathFinder.cpp  PathFinder.h  Processes.cpp  Processes.h  RayTrace.cpp  RayTrace.h  States.cpp  States.h  WorldsContainer.cpp  WorldsContainer.h
src/Engine/Modules/States/: State.cpp  State.h  StatesStack.cpp  StatesStack.h
src/Engine/Structures/: Border.cpp  Border.h  BoundingBox.cpp  BoundingBox.h  Hull.cpp  Hull.h  InventoryItem.h  PathPoint.cpp  PathPoint.h
src/Engine/Subsystems/Database/: DbConnection.h  SqlDataReader.h
src/Engine/desc/Components/: AiControllerComponent.json  CollisionComponent.json  MovementComponent.json  NavMeshComponent.json  RenderComponent.json  RenderModeComponent.json  TransformComponent.json
src/Engine/include/AI/: AiState.h  IAiState.h  IBody.h  PlayerRole.h  Role.h
src/Engine/include/Actors/: Body.h  Bullet.h  LightEmitter.h  SoundVolume.h
src/Engine/include/Components/: CameraComponent.h  CollisionComponent.h  LightComponent.h  MovementComponent.h  RenderComponent.h  TransformComponent.h
src/Engine/include/Core/: Actor.h  ActorComponent.h  Component.h  ComponentSetHolder.h  Delegates.h  Entity.h  EntityManager.h  IActor.h  Rotator.h  System.h  Vector2D.h  World.h
src/Engine/include/Graphics/: Camera.h  DebugDrawer.h  DirectionArrow.h  FloatingCamera.h
src/Engine/include/Inventory/: Weapon.h
src/Engine/include/Modules/: ActorFactory.h  ArgumentsParser.h  Collide.h  ComponentFactory.h  LevelLoader.h  PathFinder.h  RayTrace.h  SystemsManager.h  VisibilityPolygon.h  WorldLoader.h  WorldsContainer.h
src/Engine/include/Structures/: BoundingBox.h  Hull.h  NavMesh.h  PathPoint.h  ResourceHandle.h
src/Engine/include/Systems/: CollisionSystem.h  ControlSystem.h  RenderSystem.h
src/Engine/include/Utils/: Collide.h  ComponentFactory.h  Math.h  Optimization.h  SystemsManager.h
src/Engine/src/AI/: AiRole.cpp  AiState.cpp  PlayerRole.cpp  Role.cpp
src/Engine/src/Actors/: Actor.cpp  Body.cpp  Bullet.cpp  LightEmitter.cpp  SoundVolume.cpp
src/Engine/src/Components/: CameraComponent.cpp  CollisionComponent.cpp  LightComponent.cpp  MovementComponent.cpp  RenderComponent.cpp  TransformComponent.cpp
src/Engine/src/Core/: Actor.cpp  ActorComponent.cpp  Component.cpp  ComponentSetHolder.cpp  Delegates.cpp  Entity.cpp  EntityManager.cpp  Rotator.cpp  System.cpp  Vector2D.cpp  World.cpp
src/Engine/src/Graphics/: Camera.cpp  DebugDrawer.cpp  DirectionArrow.cpp  FloatingCamera.cpp
(+895 files in other folders)
